--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ h2 {
   font-family: "Inconsolata", monospace;
   font-weight: 700;
 }
+
+.loading-img-container {
+  background-color: rgba(135, 143, 255, 0.2);
+  backdrop-filter: blur(5px) brightness(90%);
+}
+
+.loading-indicator::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  margin-top: -15px;
+  margin-left: -15px;
+  border-radius: 50%;
+  border: 5px solid #ffffff;
+  animation: spinner 0.6s linear infinite;
+  clip: rect(0, 30px, 30px, 15px); /* Clip the half of the circle */
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
